# rust

./: .env.example  Cargo.toml  README.md
examples/: lc_1.rs
src/: config.rs  enum_exe.rs  error.rs  lib.rs  main.rs  routes.rs  test.txt
src/domain/: mod.rs  user.rs
src/handlers/: health.rs  mod.rs  solana.rs  user.rs
src/solana/: client.rs  mod.rs
