[package]
name = "testr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
chrono = "0.4.41"