[package]
name = "testr"
version = "0.1.0"
edition = "2021"
description = "Production-style Actix + SQLx API service"
authors = ["testr"]
license = "MIT"
default-run = "testr"

[dependencies]
actix-web = "4.11"
actix-rt = "2.9"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
solana-client = "2.0"
solana-sdk = "2.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }